RESOLVED FIXED211757
Scrollbars flicker in RTL scrollable regions
https://bugs.webkit.org/show_bug.cgi?id=211757
Summary Scrollbars flicker in RTL scrollable regions
Simon Fraser (smfr)
Reported 2020-05-11 17:31:02 PDT
Scrollbars flicker in RTL scrollable regions
Attachments
Patch (3.09 KB, patch)
2020-05-11 17:32 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-05-11 17:32:14 PDT
EWS
Comment 2 2020-05-11 18:06:01 PDT
Committed r261535: <https://trac.webkit.org/changeset/261535> All reviewed patches have been landed. Closing bug and clearing flags on attachment 399073 [details].
Radar WebKit Bug Importer
Comment 3 2020-05-11 18:07:16 PDT
Note You need to log in before you can comment on or make changes to this bug.