Scrollbars flicker in RTL scrollable regions https://bugs.webkit.org/show_bug.cgi?id=211757

Reviewed by Tim Horton.

Scrollbars deal in scroll offsets (zero-based), not scroll positions (scroll-origin based) so
the scrolling thread needs to update scrollbar painters using offsets.

Not testable because this is a transient state that gets fixed by the main thread.

* page/scrolling/mac/ScrollingTreeScrollingNodeDelegateMac.mm:
(WebCore::ScrollingTreeScrollingNodeDelegateMac::updateScrollbarPainters):


Canonical link: https://commits.webkit.org/224653@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261535 268f45cc-cd09-0410-ab3c-d52691b4dbfc